k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-web
  namespace: todo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-web
  template:
    metadata:
      labels:
        app: todo-web
    spec:
      containers:
      - name: todo-web
        image: baranotik/todo-web:1.0
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
            httpHeaders:
            - name: Host
              value: todo.local
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8000
            httpHeaders:
            - name: Host
              value: todo.local
          initialDelaySeconds: 15
          periodSeconds: 20
