k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-web
  namespace: todo
spec:
  type: ClusterIP
  selector:
    app: todo-web
  ports:
  - port: 80
    targetPort: 8000
